--- a/hotelinventoryapp/src/app/app.component.html
+++ b/hotelinventoryapp/src/app/app.component.html
@@ -1,2 +1,13 @@
 <h1>This is from app.component.html</h1>
 <app-rooms></app-rooms>
+
+<!-- Example of ngSwitch (Switch Case) -->
+<!-- <div [ngSwitch]="role">
+    <div *ngSwitchCase="'User'">Welcome User!</div>
+    <div *ngSwitchCase="'Admin'">
+        <app-rooms></app-rooms>
+    </div>
+    <div *ngSwitchDefault>
+        You are not authorized to view this page!
+    </div>
+</div> -->
