--- a/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -5,26 +5,26 @@
 
 <!-- Property Binding -->
 <div [hidden]="hideRooms">
-Number of Rooms:
-<div [innerText]="numberOfRooms"></div>
+  Number of Rooms:
+  <div [innerText]="numberOfRooms"></div>
 </div>
 
 <!-- ngIf Directive -->
 <div *ngIf="rooms.availableRooms > 0">
-    Rooms List
-    <!-- {{roomList}} -->
-    <table>
-        <tr>
-            <th>Index</th>
-            <th>Even/Odd</th>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Room Price</th>
-            <th>Room Amenities</th>
-            <th>Checkin Time</th>
-        </tr>
-        <!-- ngFor Directive -->
-        <tr *ngFor="let room of roomList; let e = even; let o = odd; let i = index">
+  Rooms List
+  <!-- {{roomList}} -->
+  <table>
+    <tr>
+      <th>Index</th>
+      <th>Even/Odd</th>
+      <th>Room Number</th>
+      <th>Room Type</th>
+      <th>Room Price</th>
+      <th>Room Amenities</th>
+      <th>Checkin Time</th>
+    </tr>
+    <!-- ngFor Directive -->
+    <!-- <tr *ngFor="let room of roomList; let e = even; let o = odd; let i = index">
             <td>{{ i }}</td>
             <td>{{ e ? "Even" : "Odd" }}</td>
             <td>{{ room.roomNumber }}</td>
@@ -32,8 +32,22 @@ Number of Rooms:
             <td>{{ room.price }}</td>
             <td>{{ room.amenities }}</td>
             <td>{{ room.checkinTime }}</td>
-        </tr>
-    </table>
+        </tr> -->
+
+    <!-- ngClass Directive -->
+    <tr
+      [ngClass]="e ? 'even' : 'odd'"
+      *ngFor="let room of roomList; let e = even; let o = odd; let i = index"
+    >
+      <td>{{ i }}</td>
+      <td>{{ e ? "Even" : "Odd" }}</td>
+      <td>{{ room.roomNumber }}</td>
+      <td>{{ room.roomType }}</td>
+      <td>{{ room.price }}</td>
+      <td>{{ room.amenities }}</td>
+      <td>{{ room.checkinTime }}</td>
+    </tr>
+  </table>
 </div>
 
 <!-- Event Binding -->
