Client Side Foundation Day 31 Workshop Solution

--- a/nusissworkshops/csfday31workshop/day31-workshop/client/src/app/app.component.html
+++ b/nusissworkshops/csfday31workshop/day31-workshop/client/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-inventory (onSelection)="selected($event)"></app-inventory>
-<app-cart [cartList]="cartList"></app-cart>
+<app-cart [cartList]="cartList" (onDelete)="deleted($event)"></app-cart>
